--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "mercadopago": "^1.5.12",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
